Added streak,journalling reminder and foregt password